--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -630,8 +630,8 @@ msgid "The CSV file contains more than 100 rows."
 msgstr "The CSV file contains more than 100 rows."
 
 msgctxt "Languages::mwl_xlsx.filters_sync_summary"
-msgid "Filters sync summary — created: [created], updated: [updated], deleted: [deleted], skipped: [skipped], errors: [errors]."
-msgstr "Filters sync summary — created: [created], updated: [updated], deleted: [deleted], skipped: [skipped], errors: [errors]."
+msgid "Filters sync summary — created: [created], updated: [updated], skipped: [skipped], errors: [errors]."
+msgstr "Filters sync summary — created: [created], updated: [updated], skipped: [skipped], errors: [errors]."
 
 msgctxt "Languages::mwl_xlsx.filters_sync_error_not_found"
 msgid "File \"[path]\" was not found."
