Add cron publish-down support for missing CSV products

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -656,3 +656,79 @@ msgstr "Unable to read CSV header."
 msgctxt "Languages::mwl_xlsx.filters_sync_error_missing_column"
 msgid "Missing required column \"[column]\" in the CSV header."
 msgstr "Missing required column \"[column]\" in the CSV header."
+
+msgctxt "Languages::mwl_xlsx.publish_down_missing_products"
+msgid "Publish down products missing from CSV"
+msgstr "Publish down products missing from CSV"
+
+msgctxt "Languages::mwl_xlsx.publish_down_missing_products.desc"
+msgid "When enabled, the cron mode disables products that do not appear in the CSV within the selected period."
+msgstr "When enabled, the cron mode disables products that do not appear in the CSV within the selected period."
+
+msgctxt "Languages::mwl_xlsx.publish_down_csv_path"
+msgid "Publish down CSV path"
+msgstr "Publish down CSV path"
+
+msgctxt "Languages::mwl_xlsx.publish_down_csv_path.desc"
+msgid "Absolute path to the CSV file that lists active products."
+msgstr "Absolute path to the CSV file that lists active products."
+
+msgctxt "Languages::mwl_xlsx.publish_down_limit"
+msgid "Publish down limit"
+msgstr "Publish down limit"
+
+msgctxt "Languages::mwl_xlsx.publish_down_limit.desc"
+msgid "Maximum number of products to disable per run. Values above 100 remove the limit."
+msgstr "Maximum number of products to disable per run. Values above 100 remove the limit."
+
+msgctxt "Languages::mwl_xlsx.publish_down_period"
+msgid "Publish down period (seconds)"
+msgstr "Publish down period (seconds)"
+
+msgctxt "Languages::mwl_xlsx.publish_down_period.desc"
+msgid "How long a product may stay unseen in the CSV before it is disabled. 3600 seconds = 1 hour."
+msgstr "How long a product may stay unseen in the CSV before it is disabled. 3600 seconds = 1 hour."
+
+msgctxt "Languages::mwl_xlsx.publish_down_disabled"
+msgid "Publish down is disabled in add-on settings."
+msgstr "Publish down is disabled in add-on settings."
+
+msgctxt "Languages::mwl_xlsx.publish_down_missing_path"
+msgid "Publish down CSV path is not configured."
+msgstr "Publish down CSV path is not configured."
+
+msgctxt "Languages::mwl_xlsx.publish_down_summary"
+msgid "Processed: [processed], matched: [seen], missing: [missing], disabled: [disabled], candidates: [candidates]"
+msgstr "Processed: [processed], matched: [seen], missing: [missing], disabled: [disabled], candidates: [candidates]"
+
+msgctxt "Languages::mwl_xlsx.publish_down_disabled_entry"
+msgid "Product #[product_id] published down"
+msgstr "Product #[product_id] published down"
+
+msgctxt "Languages::mwl_xlsx.publish_down_limit_reached"
+msgid "Reached publish down limit ([limit] items)."
+msgstr "Reached publish down limit ([limit] items)."
+
+msgctxt "Languages::mwl_xlsx.publish_down_error_not_found"
+msgid "CSV file not found: [path]"
+msgstr "CSV file not found: [path]"
+
+msgctxt "Languages::mwl_xlsx.publish_down_error_not_readable"
+msgid "CSV file is not readable: [path]"
+msgstr "CSV file is not readable: [path]"
+
+msgctxt "Languages::mwl_xlsx.publish_down_error_open_failed"
+msgid "Unable to open CSV file: [path]"
+msgstr "Unable to open CSV file: [path]"
+
+msgctxt "Languages::mwl_xlsx.publish_down_error_empty"
+msgid "CSV file is empty."
+msgstr "CSV file is empty."
+
+msgctxt "Languages::mwl_xlsx.publish_down_error_header"
+msgid "Unable to read CSV header."
+msgstr "Unable to read CSV header."
+
+msgctxt "Languages::mwl_xlsx.publish_down_error_missing_identifier"
+msgid "CSV must contain a product_id or product_code column."
+msgstr "CSV must contain a product_id or product_code column."
