Switch publish-down cron to use product timestamps

--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -632,48 +632,37 @@ msgid "Missing required column \"[column]\" in the CSV header."
 msgstr "В заголовке CSV отсутствует обязательный столбец \"[column]\"."
 
 msgctxt "Languages::mwl_xlsx.publish_down_missing_products"
-msgid "Publish down products missing from CSV"
-msgstr "Отключать товары, отсутствующие в CSV"
+msgid "Publish down stale products"
+msgstr "Отключать устаревшие товары"
 
 msgctxt "Languages::mwl_xlsx.publish_down_missing_products.desc"
-msgid "When enabled, the cron mode disables products that do not appear in the CSV within the selected period."
-msgstr "При включении крон будет отключать товары, которые не встречаются в CSV в течение заданного периода."
+msgid "When enabled, the cron mode disables products whose updated timestamp is older than the selected period."
+msgstr "При включении крон будет отключать товары с устаревшим полем updated_timestamp."
 
-msgctxt "Languages::mwl_xlsx.publish_down_csv_path"
-msgid "Publish down CSV path"
-msgstr "Путь к CSV для отключения"
-
-msgctxt "Languages::mwl_xlsx.publish_down_csv_path.desc"
-msgid "Absolute path to the CSV file that lists active products."
-msgstr "Абсолютный путь к CSV-файлу со списком актуальных товаров."
 
 msgctxt "Languages::mwl_xlsx.publish_down_limit"
 msgid "Publish down limit"
 msgstr "Лимит отключений"
 
 msgctxt "Languages::mwl_xlsx.publish_down_limit.desc"
-msgid "Maximum number of products to disable per run. Values above 100 remove the limit."
-msgstr "Максимальное количество товаров для отключения за один запуск. Значение больше 100 снимает ограничение."
+msgid "Maximum number of products to disable per run. Set to 0 to disable the limit."
+msgstr "Максимальное количество товаров для отключения за один запуск. Значение 0 отключает ограничение."
 
 msgctxt "Languages::mwl_xlsx.publish_down_period"
 msgid "Publish down period (seconds)"
 msgstr "Период отключения (секунды)"
 
 msgctxt "Languages::mwl_xlsx.publish_down_period.desc"
-msgid "How long a product may stay unseen in the CSV before it is disabled. 3600 seconds = 1 hour."
-msgstr "Как долго товар может отсутствовать в CSV перед отключением. 3600 секунд = 1 час."
+msgid "How long a product may stay without updates before it is disabled. 3600 seconds = 1 hour."
+msgstr "Как долго товар может быть без обновлений перед отключением. 3600 секунд = 1 час."
 
 msgctxt "Languages::mwl_xlsx.publish_down_disabled"
 msgid "Publish down is disabled in add-on settings."
 msgstr "Отключение товаров выключено в настройках аддона."
 
-msgctxt "Languages::mwl_xlsx.publish_down_missing_path"
-msgid "Publish down CSV path is not configured."
-msgstr "Путь к CSV для отключения не задан."
-
 msgctxt "Languages::mwl_xlsx.publish_down_summary"
-msgid "Processed: [processed], matched: [seen], missing: [missing], disabled: [disabled], candidates: [candidates]"
-msgstr "Обработано: [processed], совпало: [seen], отсутствует: [missing], отключено: [disabled], кандидатов: [candidates]"
+msgid "Stale products: [candidates], disabled: [disabled], period: [period] s"
+msgstr "Устаревших товаров: [candidates], отключено: [disabled], период: [period] с"
 
 msgctxt "Languages::mwl_xlsx.publish_down_disabled_entry"
 msgid "Product #[product_id] published down"
@@ -683,26 +672,3 @@ msgctxt "Languages::mwl_xlsx.publish_down_limit_reached"
 msgid "Reached publish down limit ([limit] items)."
 msgstr "Достигнут лимит отключений ([limit])."
 
-msgctxt "Languages::mwl_xlsx.publish_down_error_not_found"
-msgid "CSV file not found: [path]"
-msgstr "CSV-файл не найден: [path]"
-
-msgctxt "Languages::mwl_xlsx.publish_down_error_not_readable"
-msgid "CSV file is not readable: [path]"
-msgstr "CSV-файл недоступен для чтения: [path]"
-
-msgctxt "Languages::mwl_xlsx.publish_down_error_open_failed"
-msgid "Unable to open CSV file: [path]"
-msgstr "Не удалось открыть CSV-файл: [path]"
-
-msgctxt "Languages::mwl_xlsx.publish_down_error_empty"
-msgid "CSV file is empty."
-msgstr "CSV-файл пуст."
-
-msgctxt "Languages::mwl_xlsx.publish_down_error_header"
-msgid "Unable to read CSV header."
-msgstr "Не удалось прочитать заголовок CSV."
-
-msgctxt "Languages::mwl_xlsx.publish_down_error_missing_identifier"
-msgid "CSV must contain a product_id or product_code column."
-msgstr "CSV должен содержать столбец product_id или product_code."
